cargo-features = ["edition2024"]

[package]
name = "sliding_features"
version = "6.0.0"
authors = ["MathisWellmann <wellmannmathis@gmail.com>"]
edition = "2024"
license-file = "LICENSE"
description = "Modular sliding window with various signal processing functions and technical indicators"
repository = "https://github.com/MathisWellmann/sliding_features-rs"
readme = "README.md"
keywords = [
  "sliding-window",
  "signal-processing",
  "modular",
  "technical-analysis",
  "indicators",
]
categories = ["algorithms", "mathematics"]
exclude = ["img/"]

[dependencies]
getset = "0.1"
num = "0.4"

[dev-dependencies]
time_series_generator = "0.3"
rand = "0.9"
round = "0.1"
plotters = "0.3"
criterion = "0.5"

[[bench]]
name = "alma"
harness = false

[[bench]]
name = "center_of_gravity"
harness = false

[[bench]]
name = "correlation_trend_indicator"
harness = false

[[bench]]
name = "cumulative"
harness = false

[[bench]]
name = "cyber_cycle"
harness = false

[[bench]]
name = "ehlers_fisher_transform"
harness = false

[[bench]]
name = "ema"
harness = false
